fixed z-index

--- a/Ecom-Project/index.css
+++ b/Ecom-Project/index.css
@@ -85,7 +85,7 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: -1;
+  z-index: 1;
 }
 
 .banner {
@@ -249,6 +249,14 @@ h1 {
     margin-top: 0.938rem;
     display: flex;
     flex-direction: column;
+  }
+
+  .hero-image {
+    z-index: -1;
+  }
+
+  .cart-btn {
+    visibility: hidden;
   }
 }
 
